Fixing carousel extra space undesirable on some pages and hidding cookie banner for events page (parent and child views)

--- a/site/themes/precursive/css-src/pages/casestudies.less
+++ b/site/themes/precursive/css-src/pages/casestudies.less
@@ -1,5 +1,10 @@
 .case-studies-header {
 
+  /* Extra space on the sides that will add extra undesirable space */
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
   hr {
     margin: 27px auto;
   }
