--- a/site/themes/precursive/css-src/pages/events.less
+++ b/site/themes/precursive/css-src/pages/events.less
@@ -1,9 +1,13 @@
 
+/* Remove Cookie Banner from events page */
+body.section-events {
+  div[role="dialog"] {
+    display: none;
+  }
+}
+
 .masterhead-container {
-
   .logo-container {
-
-
     a.logo{
       background:url('../img/logos/precursive-white.svg') no-repeat center;
       background-size:100% auto;
